# ArcGIS-Pro_Salah_MCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
ProSalahBridge/: AppRequest.cs  BridgeServer.cs  Config.daml  Module1.cs  ProSalahBridge.csproj  ProSalahBridge.slnx
ProSalahBridge/Commands/: AddLayerCommand.cs  ExportLayoutCommand.cs  GetRequestCommand.cs  ICommand.cs  ListLayersCommand.cs  MapUtil.cs  ParamUtil.cs  PingCommand.cs  QueryCommand.cs  RunGpCommand.cs  ZoomToCommand.cs
ProSalahBridge/Images/: make_icons.py
ProSalahBridge/Properties/: launchSettings.json
ProSalahBridge/UI/: CreateWebAppButton.cs  PingButton.cs  PreviewDashboardButton.cs  PreviewWebAppButton.cs  PublishButton.cs  StartServerButton.cs
demos/: check_github_token.py  setup_sample.py
docs/: ARCHITECTURE.md  CLAUDE_CODE_PROMPT.md  PROTOCOL.md
src/arcgis_pro_salah_mcp/: __init__.py  _result.py  bootstrap.py  config.py  server.py
src/arcgis_pro_salah_mcp/live/: __init__.py  client.py  ops.py  policy.py
src/arcgis_pro_salah_mcp/portal/: __init__.py  ops.py
src/arcgis_pro_salah_mcp/pro/: __init__.py  metadata.py  ops.py
src/arcgis_pro_salah_mcp/webapp/: __init__.py  dashboard.py  generator.py  github.py
src/arcgis_pro_salah_mcp/webapp/templates/: app.js  dashboard.html  dashboard.js  index.html
tests/: test_core.py
