[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgis-pro-salah-mcp"
version = "0.1.0"
description = "Control ArcGIS Pro (ArcPy), ArcGIS Online/Portal (ArcGIS API for Python) and generate ArcGIS Maps SDK for JavaScript web apps — all through Claude via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Salah Muhammed" }]
keywords = ["arcgis", "arcgis-pro", "arcpy", "mcp", "gis", "geoai", "claude", "esri"]

# NOTE:
#   `arcpy` is NOT listed here on purpose — it ships with ArcGIS Pro and is not
#   pip-installable. The MCP server is meant to run inside ArcGIS Pro's
#   `arcgispro-py3` interpreter (see bootstrap.py for the self-healing logic).
dependencies = [
    "mcp>=1.3",
]

[project.optional-dependencies]
# ArcGIS API for Python (Layer 2 — Portal / ArcGIS Online). Heavy dependency,
# so it is optional and only required for the portal_* tools.
portal = ["arcgis>=2.3"]
dev = ["pytest>=8"]

[project.scripts]
arcgis-pro-salah-mcp = "arcgis_pro_salah_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Ahmed-salah-muhammed/ArcGIS-Pro_Salah_MCP"
Repository = "https://github.com/Ahmed-salah-muhammed/ArcGIS-Pro_Salah_MCP"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the JS web-app templates inside the wheel.
arcgis_pro_salah_mcp = ["webapp/templates/*"]
